# try-drop

./: .gitignore  Cargo.toml  LICENSE  NEW_README.md  README.md
.github/workflows/: rust.yml
book/: book.toml
book/src/: Introduction.md  SUMMARY.md
drop-strategies/abort/: Cargo.toml
drop-strategies/abort/examples/: main.rs
drop-strategies/abort/src/: lib.rs
drop-strategies/broadcast/: Cargo.toml
drop-strategies/broadcast/examples/: main.rs
drop-strategies/broadcast/src/: lib.rs  receiver.rs
drop-strategies/exit/: Cargo.toml
drop-strategies/exit/examples/: main.rs
drop-strategies/exit/src/: lib.rs
drop-strategies/noop/: Cargo.toml
drop-strategies/noop/examples/: main.rs
drop-strategies/noop/src/: lib.rs
drop-strategies/panic/: Cargo.toml
drop-strategies/panic/examples/: main.rs
drop-strategies/panic/src/: lib.rs
drop-strategies/write/: Cargo.toml
drop-strategies/write/examples/: main.rs
drop-strategies/write/src/: lib.rs
examples/: abort.rs  adhoc.rs  broadcast.rs  common.rs  exit.rs  global.rs  noop.rs  once_cell.rs  panic.rs  shim.rs  thread_local.rs  thread_local_scope.rs  unreachable.rs  unreachable_unsafe.rs  write.rs
src/: adapters.rs  debugging.rs  drop_adapter.rs  drop_strategies.rs  global.rs  global_crate_root.rs  infallible.rs  lib.rs  new_global.rs  on_uninit.rs  prelude.rs  shim.rs  test_utils.rs  thread_local.rs  utils.rs
src/double/: global.rs  mod.rs
src/drop_strategies/: abort.rs  adhoc.rs  broadcast.rs  exit.rs  mod.rs  noop.rs  once_cell.rs  panic.rs  unreachable.rs  write.rs
src/drop_strategies/adhoc/: fn_mut.rs  mod.rs
src/drop_strategies/adhoc/fn_mut/: mod.rs  thread_unsafe.rs
src/drop_strategies/once_cell/: mod.rs  thread_unsafe.rs
src/drop_strategies/write/: mod.rs  thread_unsafe.rs
src/fallback/: global.rs  mod.rs  new_thread_local.rs  thread_local.rs
src/handlers/: common.rs  fns.rs  mod.rs  shim.rs  uninit_error.rs
src/handlers/common/: global.rs  handler.rs  mod.rs  proxy.rs  shim.rs
src/handlers/common/thread_local/: mod.rs  scope_guard.rs
src/handlers/fallback/: gglobal.rs  global.rs  handler.rs  macros.rs  mod.rs  shim.rs  sshim.rs  thread_local.rs  tthread_local.rs
src/handlers/fallback/thread_local/: mod.rs  scope_guard.rs
src/handlers/primary/: gglobal.rs  global.rs  handler.rs  macros.rs  mod.rs  shim.rs  sshim.rs  thread_local.rs  tthread_local.rs
src/handlers/primary/thread_local/: mod.rs  scope_guard.rs
src/primary/: mod.rs
