[package]
name = "try-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", default-features = false }
downcast-rs = { version = "1.2.0", optional = true }
once_cell = { version = "1.9.0", optional = true }
parking_lot = { version = "0.12.0", optional = true }
shrinkwraprs = { version = "0.3.0", default-features = false, optional = true }
tokio = { version = "1.16.1", features = ["sync", "rt"], default-features = false, optional = true }

[features]
default = ["global", "downcast-rs", "std", "shrinkwraprs", "derives", "drop-strategies"]
global = ["std", "once_cell", "parking_lot"]
std = ["anyhow/std"]
derives = []
drop-strategies = ["ds-abort", "ds-broadcast", "ds-exit", "ds-noop", "ds-panic", "ds-write"]
ds-abort = ["std"]
ds-broadcast = ["tokio", "std"]
ds-exit = ["std"]
ds-noop = []
ds-panic = []
ds-write = ["std", "parking_lot"]

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread"], default-features = false }
