[package]
name = "broadcast-drop-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["sync"], default-features = false }
try-drop = { path = "../.." }

[dev-dependencies]
panic-drop-strategy = { path = "../panic" }
try-drop = { path = "../..", features = ["debugging"] }

[features]
default = ["new"]
new = ["tokio/rt-multi-thread"]
