[package]
name = "panic-drop-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
try-drop = { path = "../.." }

[dev-dependencies]
abort-drop-strategy = { path = "../abort" }
try-drop = { path = "../..", features = ["debugging"] }
