[package]
name = "write-drop-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
parking_lot = "0.12.0"
try-drop = { path = "../.." }

[dev-dependencies]
panic-drop-strategy = { path = "../panic" }
try-drop = { path = "../..", features = ["debugging"] }
